# VisualComputingCheckerboard

./: .gitignore  CMakeLists.txt  README.md
AR/: AR.cpp  ar_log.csv  imgui.ini
AR/shaders/: cubeFragmentShader.frag  cubeVertexShader.vert  screenFragmentShader.frag  screenVertexShader.vert
Camera/: cameraQuad.cpp  colorShader.frag  colorShader.vert  vertexColorShader.vert
CameraCalibration/: default.xml  out_camera_data.xml
Webcam/: gpu_edge.frag  gpu_grayscale.frag  gpu_pixelate.frag  gpu_transform.frag  webcamQuad.cpp
ar_analysis/: summary.txt
common/: Camera.cpp  Cube.cpp  Cube.hpp  Object.cpp  TextureShader.cpp
filters/: Filters.cpp  Filters.hpp
scripts/: analyze_detailed.py  analyze_summary.py  plot_agg.py  plot_ar_metrics.py  plot_bench.py  run_full_bench.sh  run_small_bench.sh
transforms/: Transforms.cpp  Transforms.hpp
